<resources>
    <string name="app_name">Nhập Hàng</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item_title">Thêm mặt hàng</string>
    <string name="item_name">Tên mặt hàng: abc...</string>
    <string name="item_price">Giá: 1000,..</string>
    <string name="item_quantity">Số lượng: 1,2,3,...</string>
    <string name="item_note">Thông tin thêm</string>
    <string name="item_category">Nhóm hàng</string>
    <string name="add_category_title">Thêm nhóm hàng </string>
    <string name="category_name">Tên nhóm hàng: abc,...</string>
    <string name="category_detail">Chi tiết nhóm hàng</string>
</resources>